# aemo_electricity_prices

./: README.md  VIC1_2026-01-08_16-21-26_to_2026-02-08_16-21-26.csv  analyse_prices.ipynb  analyse_prices_v2.ipynb  check_network.py  distribution_fitting.py  explore_cauchy_dist.ipynb  main.py  pyproject.toml  query_openelec_api.py  ribbon_plot.py
data/: VIC1_2026-02-08_18-46-09_to_2026-02-16_18-46-09.csv  VIC1_one_year_from_2026-02-08_16-48-23.csv  nsw_testing_data.csv  nsw_training_data.csv
data_collection/: get_data.py  utils.py
